Bug 347353 - ktraderclient5 doesn't return any applications with mimetype x-scheme-handler/*
Summary: ktraderclient5 doesn't return any applications with mimetype x-scheme-handler/*
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kservice
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-06 22:50 UTC by Jordan Klassen
Modified: 2015-05-14 22:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jordan Klassen 2015-05-06 22:50:26 UTC
It appears that ktraderclient5 doesn't work with any mimetypes under x-scheme-handler.

For example, `ktraderclient5 --mimetype x-scheme-handler/http --servicetype Application` returns

mimetype is : x-scheme-handler/http
servicetype is : Application
got 0 offers.

However, other mimetypes, such as text/plain work fine. It also works to use ktraderclient. kde-open5 also works properly (such as kde-open5 http://google.com)

Reproducible: Always

Steps to Reproduce:
1. ktraderclient5 --mimetype x-scheme-handler/http --servicetype Application

Actual Results:  
mimetype is : x-scheme-handler/http
servicetype is : Application
got 0 offers.

Expected Results:  
mimetype is : x-scheme-handler/http
servicetype is : Application
got 4 offers.
---- Offer 0 ----
Invalid property Actions
StartupNotify : 'TRUE'
Invalid property UntranslatedGenericName
Type : 'Application'
Name : 'Firefox'
Comment : 'Browse the World Wide Web'
GenericName : 'Web Browser'
Icon : 'firefox'
Exec : 'firefox %u'
Terminal : 'FALSE'
Invalid property TerminalOptions
Invalid property Path
ServiceTypes : 'text/html - text/xml - application/xhtml+xml - application/vnd.mozilla.xul+xml - text/mml - x-scheme-handler/http - x-scheme-handler/https - x-scheme-handler/ftp - Application'
AllowAsDefault : 'TRUE'
InitialPreference : '1'
Invalid property Library
DesktopEntryPath : '/usr/share/applications/firefox.desktop'
DesktopEntryName : 'firefox'
Keywords : ''
Categories : 'Network - WebBrowser'
---- Offer 1 ----
Invalid property Actions
StartupNotify : 'TRUE'
Invalid property UntranslatedGenericName
Invalid property X-GNOME-Bugzilla-Bugzilla
Invalid property X-GNOME-Bugzilla-Component
Invalid property X-GNOME-Bugzilla-Product
Invalid property X-GNOME-Bugzilla-Version
Invalid property X-GNOME-FullName
Invalid property X-GNOME-UsesNotifications
Type : 'Application'
Name : 'Web'
Comment : 'Browse the web'
GenericName : 'Web Browser'
Icon : 'web-browser'
Exec : 'epiphany %U'
Terminal : 'FALSE'
Invalid property TerminalOptions
Invalid property Path
ServiceTypes : 'text/html - text/xml - application/xhtml+xml - x-scheme-handler/http - x-scheme-handler/https - multipart/related - application/x-mimearchive - message/rfc822 - Application'
AllowAsDefault : 'TRUE'
InitialPreference : '1'
Invalid property Library
DesktopEntryPath : '/usr/share/applications/epiphany.desktop'
DesktopEntryName : 'epiphany'
Keywords : 'web - browser - internet'
Categories : 'Network - GNOME - GTK - WebBrowser'
---- Offer 2 ----
Invalid property MultipleArgs
StartupNotify : 'FALSE'
Invalid property UntranslatedGenericName
Type : 'Application'
Name : 'Aurora'
Invalid property Comment
GenericName : 'Web Browser'
Icon : 'firefox-aurora-icon'
Exec : 'firefox-aurora %u'
Terminal : 'FALSE'
Invalid property TerminalOptions
Invalid property Path
ServiceTypes : 'text/html - text/xml - application/xhtml+xml - application/xml - application/vnd.mozilla.xul+xml - application/rss+xml - application/rdf+xml - image/gif - image/jpeg - image/png - x-scheme-handler/http - x-scheme-handler/https - x-scheme-handler/ftp - x-scheme-handler/chrome - Application'
AllowAsDefault : 'TRUE'
InitialPreference : '1'
Invalid property Library
DesktopEntryPath : '/usr/share/applications/firefox-aurora.desktop'
DesktopEntryName : 'firefox-aurora'
Keywords : ''
Categories : 'Application - Network'
---- Offer 3 ----
StartupWMClass : 'Google-chrome-beta'
Invalid property UntranslatedGenericName
Invalid property X-Ayatana-Desktop-Shortcuts
Type : 'Application'
Name : 'Google Chrome (beta)'
Comment : 'Access the Internet'
GenericName : 'Web Browser'
Icon : 'google-chrome-beta'
Exec : '/usr/bin/google-chrome-beta %U'
Terminal : 'FALSE'
Invalid property TerminalOptions
Invalid property Path
ServiceTypes : 'text/html - text/xml - application/xhtml_xml - image/webp - x-scheme-handler/http - x-scheme-handler/https - x-scheme-handler/ftp - Application'
AllowAsDefault : 'TRUE'
InitialPreference : '1'
Invalid property Library
DesktopEntryPath : '/usr/share/applications/google-chrome-beta.desktop'
DesktopEntryName : 'google-chrome-beta'
Keywords : ''
Categories : 'Network - WebBrowser'


I'm running Manjaro linux (arch based).

$ pacman -Qi kde-cli-tools
Name           : kde-cli-tools
Version        : 5.2.2-2
Description    : Tools based on KDE Frameworks 5 to better interact with the system
Architecture   : x86_64
URL            : https://projects.kde.org/projects/kde/workspace/kde-cli-tools
Licenses       : LGPL
Groups         : None
Provides       : None
Depends On     : kdesu  kdelibs4support  kcmutils
Optional Deps  : None
Required By    : plasma-workspace
Optional For   : kcmsystemd  xdg-utils
Conflicts With : None
Replaces       : None
Installed Size :   3.55 MiB
Packager       : Antonio Rojas <arojas@archlinux.org>
Build Date     : Thu 16 Apr 2015 11:47:19 PM PDT
Install Date   : Fri 01 May 2015 11:38:10 AM PDT
Install Reason : Installed as a dependency for another package
Install Script : No
Validated By   : Signature
Comment 1 David Faure 2015-05-14 22:25:52 UTC
Git commit 3e2bf9f893148372547a018b89d68e276cb65009 by David Faure.
Committed on 14/05/2015 at 22:25.
Pushed by dfaure into branch 'master'.

Fix `ktraderclient5 --mimetype x-scheme-handler/http`
FIXED-IN: 5.11
CHANGELOG: Fix querying ksycoca for x-scheme-handler/* pseudo-mimetypes.

M  +6    -3    src/services/kmimetypetrader.cpp

http://commits.kde.org/kservice/3e2bf9f893148372547a018b89d68e276cb65009