Fix `ktraderclient5 --mimetype x-scheme-handler/http`

BUG: 347353
FIXED-IN: 5.11
CHANGELOG: Fix querying ksycoca for x-scheme-handler/* pseudo-mimetypes.